fixing a few things

--- a/static/admin/config.yaml
+++ b/static/admin/config.yaml
@@ -2,35 +2,36 @@ backend:
   name: git-gateway
   branch: master # Branch to update (optional; defaults to master)
 
-publish_mode: editorial_workflow
-
 media_folder: static/assets
-public_folder: assets
+public_folder: /assets
 
 collections:
-  - name: blog
-    label: Blog
-    folder: blog
+  - name: 'blog'
+    label: 'Blog'
+    folder: 'src/pages/blog'
     create: true
+    slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
     fields:
       - { name: path, label: Path }
       - { name: date, label: Date, widget: date }
       - { name: title, label: Title }
       - { name: body, label: Body, widget: markdown }
-  - name: speeches
-    label: Speeches
-    folder: speeches
+
+  - name: 'speeches'
+    label: 'Speeches'
+    folder: 'src/pages/speeches'
     create: true
     fields:
-      - { name: path, label: Path }
-      - { name: date, label: Date, widget: date }
-      - { name: location, label: Location }
-      - { name: title, label: Title }
-      - { name: body, label: Body, widget: markdown }
-  - name: carousel
-    label: Carousel
-    folder: carousel
+      - { name: 'path', label: 'Path' }
+      - { name: 'date', label: 'Date', widget: 'date' }
+      - { name: 'location', label: 'Location' }
+      - { name: 'title', label: 'Title' }
+      - { name: 'body', label: 'Body', widget: 'markdown' }
+
+  - name: 'carousel'
+    label: 'Carousel'
+    folder: 'src/images/carousel'
     create: true
     fields:
-      - { name: location, label: Location }
-      - { label: Image, name: image, widget: image }
+      - { name: 'location', label: 'Location' }
+      - { label: 'Image', name: 'image', widget: 'image' }
