--- a/static/admin/config.yaml
+++ b/static/admin/config.yaml
@@ -1,5 +1,6 @@
 backend:
   name: git-gateway
+  repo: nicksrandall/jeffflake.com
   branch: master # Branch to update (optional; defaults to master)
 
 media_folder: static/assets
