--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "@emotion/core": "^10.0.5",
     "@emotion/styled": "^10.0.5",
+    "@reach/dialog": "^0.1.2",
+    "@reach/visually-hidden": "^0.1.1",
     "facepaint": "^1.2.1",
     "gatsby": "^2.0.76",
     "gatsby-image": "^2.0.20",
@@ -42,6 +44,7 @@
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
   },
   "devDependencies": {
+    "gatsby-plugin-google-fonts": "0.0.4",
     "prettier": "^1.15.2",
     "react-social-icons": "^4.1.0"
   },
