--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-helmet": "^5.2.0",
     "react-media": "^1.9.2",
     "react-typography": "^0.16.18",
+    "smoothscroll-polyfill": "^0.4.3",
     "typography": "^0.16.18",
     "typography-theme-parnassus": "^0.16.18"
   },
