--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-source-filesystem": "^2.0.8",
     "gatsby-transformer-sharp": "^2.1.8",
     "netlify-cms": "^2.3.2",
+    "particles.js": "^2.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
