--- a/package.json
+++ b/package.json
@@ -5,34 +5,35 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "@emotion/core": "^10.0.5",
-    "@emotion/styled": "^10.0.5",
-    "@reach/dialog": "^0.1.2",
-    "@reach/visually-hidden": "^0.1.1",
+    "@emotion/core": "^10.0.14",
+    "@emotion/styled": "^10.0.14",
+    "@reach/dialog": "^0.2.9",
+    "@reach/visually-hidden": "^0.1.4",
     "facepaint": "^1.2.1",
-    "gatsby": "^2.0.76",
-    "gatsby-image": "^2.0.20",
-    "gatsby-plugin-emotion": "^4.0.1",
-    "gatsby-plugin-manifest": "^2.0.9",
-    "gatsby-plugin-netlify": "^2.0.6",
-    "gatsby-plugin-netlify-cms": "^3.0.9",
-    "gatsby-plugin-offline": "^2.0.16",
-    "gatsby-plugin-react-helmet": "^3.0.2",
-    "gatsby-plugin-sharp": "^2.0.14",
-    "gatsby-plugin-typography": "^2.2.5",
-    "gatsby-source-filesystem": "^2.0.8",
-    "gatsby-transformer-sharp": "^2.1.8",
-    "netlify-cms": "^2.3.2",
+    "gatsby": "^2.13.42",
+    "gatsby-image": "^2.2.7",
+    "gatsby-plugin-emotion": "^4.1.2",
+    "gatsby-plugin-manifest": "^2.2.4",
+    "gatsby-plugin-netlify": "^2.1.3",
+    "gatsby-plugin-netlify-cms": "^4.1.6",
+    "gatsby-plugin-offline": "^2.2.4",
+    "gatsby-plugin-react-helmet": "^3.1.2",
+    "gatsby-plugin-sharp": "^2.2.9",
+    "gatsby-plugin-typography": "^2.3.2",
+    "gatsby-source-filesystem": "^2.1.6",
+    "gatsby-transformer-sharp": "^2.2.5",
+    "netlify-cms": "^2.9.7",
+    "netlify-cms-app": "^2.9.7",
     "particles.js": "^2.0.0",
-    "prop-types": "^15.6.2",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-helmet": "^5.2.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
     "react-media": "^1.9.2",
-    "react-typography": "^0.16.18",
-    "smoothscroll-polyfill": "^0.4.3",
-    "typography": "^0.16.18",
-    "typography-theme-parnassus": "^0.16.18"
+    "react-typography": "^0.16.19",
+    "smoothscroll-polyfill": "^0.4.4",
+    "typography": "^0.16.19",
+    "typography-theme-parnassus": "^0.16.19"
   },
   "keywords": [
     "gatsby"
@@ -46,8 +47,8 @@
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
   },
   "devDependencies": {
-    "gatsby-plugin-google-fonts": "0.0.4",
-    "prettier": "^1.15.2",
+    "gatsby-plugin-google-fonts": "1.0.1",
+    "prettier": "^1.18.2",
     "react-social-icons": "^4.1.0"
   },
   "repository": {
